k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vite-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vite-frontend
  template:
    metadata:
      labels:
        app: vite-frontend
    spec:
      containers:
        - name: vite-frontend
          image: gcr.io/databuff-456300/vite-app:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: gcr-json-key
