k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-backend-service
  annotations:
    cloud.google.com/load-balancer-type: "External"
spec:
  type: LoadBalancer
  loadBalancerIP: 35.188.83.222  
  selector:
    app: flask-backend
  ports:
    - port: 5000
      targetPort: 5000
