k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vite-service
spec:
  type: LoadBalancer
  loadBalancerIP: 34.133.49.171  
  selector:
    app: vite-frontend
  ports:
    - port: 80
      targetPort: 80
